# layservices

./: .env.example  .gitignore  Dockerfile  Dockerfile.mcp  Dockerfile.worker  Jenkinsfile  README.md  config.py  docker-compose.yml  main.py  prefect.yaml  pyproject.toml  requirements.txt
.github/workflows/: gitguardian.yml
apis/: defender_api.py  logrhythm_api.py  prtg_api.py  remedy_api.py
app/: alembic.ini
app/agents/: Agent.py  AlertClassifier.py  __init__.py
app/alembic/: env.py
app/alembic/versions/: 0d572b6f8d24_migration_for_models.py  2e23df6e5700_migration_for_models.py  4aa9fd53c484_add_fiels_into_logrhythm_alert.py  74f1d4f4894a_create_processed_documents_table.py  94f63ef059ed_update_logrhythm.py  a7c7f81a4e30_add_fields_for_event_in_logrhythmalarm_.py  bbb5ac456449_add_logrhythmalarm_table.py  de205cf4a53c_.py
app/database/: ConnectionManager.py  FileServer.py  Postgres.py  Qdrant.py  Redis.py
app/models/: LogrhythmAlarm.py  ProcessedDocument.py  base.py
app/pipelines/: alarms_fetcher.py  alarms_handler.py  file_server.py
app/prompts/: alert_classifier.txt  soc_agent.txt
app/routes/: alarms.py  documents.py  embeddings.py  health_databases.py
app/routes/apis/: kaxan_api.py
app/services/: Docling.py  DocumentsLoader.py  Embeddings.py  KaxanScanner.py  PromptManager.py  SendRequest.py  StartUpProcess.py
app/services/Documents/: FileServer.py
app/services/apis/: AlarmFetcher.py  AlarmProcessor.py  LogRhythmFetcher.py  LogRhythmProcessor.py  PRTGFetcher.py  Remedy.py  logrhythm_api.py  prtg_api.py
config/: settings.py
utils/: auth_manager.py
