[project]
name = "socfusion"
version = "0.1.0"
description = "AI agent for automating tasks and decision-making in SOC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "click==8.1.8",
    "click-default-group==1.2.4",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.9",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "idna==3.10",
    "pip==22.0.2",
    "playwright==1.50.0",
    "psycopg2==2.9.10",
    "pyaes==1.6.1",
    "pyasn1==0.6.1",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyee==12.1.1",
    "pyyaml==6.0.2",
    "rsa==4.9",
    "setuptools==59.6.0",
    "shot-scraper==1.5",
    "sniffio==1.3.1",
    "starlette==0.45.3",
    "telethon==1.38.1",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.0"
]