[project]
name = "socfusion"
version = "0.1.0"
description = "AI agent for automating tasks and decision-making in SOC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.4.6",
    "aiohttp==3.11.13",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "async-timeout==4.0.3",
    "attrs==25.1.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "click-default-group==1.2.4",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.9",
    "frozenlist==1.5.0",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.19",
    "langchain-core==0.3.40",
    "langchain-text-splitters==0.3.6",
    "langsmith==0.3.11",
    "multidict==6.1.0",
    "numpy==1.26.4",
    "orjson==3.10.15",
    "packaging==24.2",
    "pip==22.0.2",
    "playwright==1.50.0",
    "propcache==0.3.0",
    "psycopg2==2.9.10",
    "pyaes==1.6.1",
    "pyasn1==0.6.1",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyee==12.1.1",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rsa==4.9",
    "setuptools==59.6.0",
    "shot-scraper==1.5",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.38",
    "starlette==0.45.3",
    "telethon==1.38.1",
    "tenacity==9.0.0",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "yarl==1.18.3",
    "zstandard==0.23.0",
    "cffi==1.17.1",
    "cryptography==44.0.2",
    "pycparser==2.22",
    "pyspnego==0.11.2",
    "smbprotocol==1.15.0",
    "pypdf2==3.0.1",
    "alembic==1.15.1",
    "mako==1.3.9",
    "grpcio==1.70.0",
    "grpcio-tools==1.70.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "hyperframe==6.1.0",
    "portalocker==2.10.1",
    "protobuf==5.29.3",
    "qdrant-client==1.13.3"
]